ncc/testsuite/positive/bug-1225.n
// REFERENCE: Nemerle.Compiler

public module TestModule
{
  public TestMethod() : void
  {
    def actions = [<[decl: public TestQuotedMethod() : void { } ]>];

    def _ = <[decl:
      module TestQuotedModule
      {
         ..$(actions)
      }]>;
  }
}
