ncc/testsuite/negative/bug-0774.n

      def processBuilder(builder)
      {
        foreach (_ in builder)
        {
            _ = fun(decl)
            {
              _ = decl.body.Location; // E: typing fails on accessing member
            };
        }
      }

      processBuilder([] : list [int]);


